Fix scroll bar on mobile.

--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,10 +1,13 @@
+html {
+    overflow-x: hidden;
+}
 body {
     font-family: 'Lato', sans-serif;
     color: $black;
-		max-width: 100%;
+	max-width: 100%;
         
     overflow-x: hidden;
-   
+   position: relative;
    
 }
 
