--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -10,6 +10,22 @@
 	transition: all .3s; 
 	
 
+	&__wrapper {
+
+
+		width: 100%;
+		max-width: 799px;
+		margin-left: auto;
+		margin-right: auto;
+
+		@mixin atMedium {
+			width: 100%;
+			max-width: 1200px;
+		}
+		
+		
+	
+	}
 	
 
 	@mixin atSmall {
@@ -74,7 +90,7 @@
 		margin-right: auto;
 		display: block;
 		padding-top: 8px;
-
+		
 		&--is-not-visible {
 			opacity: 0;
 		}
@@ -138,7 +154,6 @@
 		vertical-align: center;
 		opacity: 0;
 		transition: opacity .3s ease-in-out;
-		
 
 		&--is-visible {
 			opacity: 1;
